--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,7 @@ services:
       - selenium
 
   selenium:
-    image: selenium/standalone-chrome-debug:3.11.0-californium
-    environment:
-      - VNC_NO_PASSWORD=1
-      - SCREEN_WIDTH=1800
-      - SCREEN_HEIGHT=960
-    ports:
-      - "4444:4444"
-      - "5900:5900"
+      image: selenium/standalone-chrome:latest
+      shm_size: 2g
+      ports:
+        - "4444:4444"
